--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "theme-vdoing-blog",
+  "name": "vuepress-yitotu-blog",
   "version": "1.0.0",
   "scripts": {
     "dev": "vuepress dev docs",
